carousel spacing fix

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -263,12 +263,16 @@ header {
   align-items: center;
   flex-direction: column;
   width: 85%;
-  height: 85%;
+  height: 216px;
   border-radius: 5px;
 }
 
 .carouselDiv {
   margin-top: 90px;
+}
+
+.carouselDiv h3 {
+  margin-bottom: 16px;
 }
 
 .carousel_arrows {
@@ -278,9 +282,13 @@ header {
   top: 35%;
 }
 
+.legend {
+  font-family: "Nunito", sans-serif;
+}
+
 .icons {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 16px;
+  margin-bottom: 16px;
   font-size: 2em;
 }
 
